
Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

23-Oct-2009 Andrew Eddie
 ^ Fixed new registered type in User Options to be able to select any group.
 ^ Added check to group delete to ensure that Public and Registered can't be removed.
 # Fixed bug in com_users registration controller.
 # Fixed bugs in com_users router.

23-Oct-2009 Ron Severdia
^ Removed Austere template

23-Oct-2009 Andrew Eddie
 ! Working commit of adding permissions checks to admin com_users.
 ^ Removed access check on com_cpanel (all can access).
 ^ Removed access check on com_admin (all can access - still need to tune internal access to some data).
 ^ Split core.login into core.login.site and core.login.admin.
 ^ Reordered user groups back to the 1.5 way.

22-Oct-2009 Ron Severdia
^ Migrated Media Manager assets to main media directory.
# Validation errors fixed and cleanup of Help page.
^ Migrated User Manager assets to main media directory.

22-Oct-2009 Ian MacLennan
 # Finally found the problem with the progress bar, and fixed (com_media)
 # Implemented Type Filtering in uploader

21-Oct-2009 Andrew Eddie
 + Added language field to weblinks table.
 ^ Added permission checks to com_weblinks (with associated refactoring).
 ! Cleanup @access in docblocks; PHP5-ise functions.

21-Oct-2009 Ian MacLennan
 # Fixed start upload button to adjust to markup changes

20-Oct-2009 Ercan Ozkaya
 ^ Updated MooTools core to 1.2.4
 ^ Merged branch erdsiger (com_massmail is merged into com_users)

20-Oct-2009 Ian MacLennan
 # Fixed regression in flash uploader.

19-Oct-2009 Ron Severdia
# Fixed small bugs in Media Manager and validation errors

19-Oct-2009 Ian MacLennan
 # Fixed updated Uploader to reload Files frame

18-Oct-2009 Mark Dexter
# Fix problems in jos_menu, jos_categories sample data

18-Oct-2009 Ron Severdia
+ Version 0.1 of Austere template

17-Oct-2009 Ron Severdia
+ New icons, CSS

17-Oct-2009 Hannes Papenberg